--- a/apply.html
+++ b/apply.html
@@ -157,193 +157,9 @@
       </section>
 
       <p class="tag">
-        <strong>Tip:</strong> Have documents ready â€” proof of income, ID, Social
-        Security numbers, and household information. This speeds up the process.
-      </p>
-    </main>
-
-    <footer>
-      <p>
-        <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
-        affiliated with any agency. Made in Lexington, KY, by <br />
-        <a
-          href="https://sleepingbear.us/"
-          target="_blank"
-          rel="noopener"
-          style="color: #93c5fd"
-        >
-          Sleeping Bear Labs
-        </a>
-      </p>
-    </footer>
-  </body>
-</html>
-.Groups[1].Value
-    $val = $val -replace $patNdash,  "–"
-    $val = $val -replace $patMdash,  "—"
-    $val = $val -replace $patRsquo,  "’"
-    $val = $val -replace $patLsquo,  "‘"
-    $val = $val -replace $patLdquo,  "“"
-    $val = $val -replace $patRdquo,  "”"
-    $val = $val -replace $patHellip, "…"
-    $val = $val -replace $patBull,   "•"
-    return $val
-  </title>
-    <style>
-      :root {
-        --bg: #0f172a;
-        --card: #111827;
-        --ink: #e5e7eb;
-        --muted: #94a3b8;
-        --accent: #22c55e;
-        --ring: #334155;
-      }
-      * {
-        box-sizing: border-box;
-      }
-      body {
-        margin: 0;
-        background: var(--bg);
-        color: var(--ink);
-        font: 16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Arial,
-          sans-serif;
-      }
-      .wrap {
-        max-width: 720px;
-        margin: 0 auto;
-        padding: 20px;
-      }
-      .logo {
-        text-align: center;
-        margin-bottom: 18px;
-      }
-      .logo img {
-        max-width: 120px;
-        height: auto;
-        filter: drop-shadow(0 6px 12px rgba(0, 0, 0, 0.35));
-      }
-      header h1 {
-        font-size: 26px;
-        margin: 6px 0 4px;
-      }
-      header p.lead {
-        color: var(--muted);
-        margin: 0 0 14px;
-      }
-      .tag {
-        color: var(--muted);
-        font-size: 14px;
-        margin: 2px 0 14px;
-      }
-      .grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 12px;
-      }
-      .card {
-        background: var(--card);
-        border: 1px solid var(--ring);
-        border-radius: 14px;
-        padding: 14px;
-        box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3), 0 8px 24px rgba(0, 0, 0, 0.25);
-      }
-      .card h3 {
-        margin: 4px 0 6px;
-        font-size: 18px;
-        color: #86efac;
-      }
-      .chip {
-        display: inline-block;
-        font-weight: 700;
-        font-size: 12px;
-        letter-spacing: 0.02em;
-        padding: 4px 8px;
-        border-radius: 999px;
-        background: rgba(34, 197, 94, 0.15);
-        color: #86efac;
-        border: 1px solid rgba(34, 197, 94, 0.35);
-      }
-      footer {
-        color: var(--muted);
-        font-size: 13px;
-        padding: 24px 20px 36px;
-        text-align: center;
-      }
-      a {
-        color: #93c5fd;
-      }
-    </style>
-  </head>
-  <body>
-    <main class="wrap">
-      <div class="logo">
-        <img src="dr-kymn.png" alt="Dr. KYMN mascot" />
-      </div>
-
-      <header>
-        <span class="chip">How to Apply</span>
-        <h1>Start your application</h1>
-        <p class="lead">
-          You can apply for Kentucky Medicaid or KCHIP online, by phone, by
-          mail, or in person. Here&rsquo;s how.
-        </p>
-      </header>
-
-      <section class="grid">
-        <article class="card">
-          <h3>Apply online</h3>
-          <p>
-            Go to
-            <a href="https://kynect.ky.gov/" target="_blank" rel="noopener"
-              >kynect.ky.gov</a
-            >. Create an account or log in. The system will guide you through
-            eligibility and applications.
-          </p>
-        </article>
-
-        <article class="card">
-          <h3>Apply by phone</h3>
-          <p>
-            Call the Kentucky Department for Community Based Services (DCBS) at
-            <strong>855-306-8959</strong> to start an application over the
-            phone.
-          </p>
-        </article>
-
-        <article class="card">
-          <h3>Apply in person</h3>
-          <p>
-            Visit your local <strong>DCBS office</strong>. Staff can help you
-            fill out the forms and answer questions.
-          </p>
-        </article>
-
-        <article class="card">
-          <h3>Apply by mail</h3>
-          <p>
-            Download and print the Medicaid application from kynect, then mail
-            the completed form to your local DCBS office.
-          </p>
-        </article>
-
-        <article class="card">
-          <h3>Need help?</h3>
-          <p>
-            Free local <strong>kynectors</strong> can help you apply. Find one
-            at
-            <a
-              href="https://khbe.ky.gov/FreeHelp/Pages/index.aspx"
-              target="_blank"
-              rel="noopener"
-              >khbe.ky.gov</a
-            >.
-          </p>
-        </article>
-      </section>
-
-      <p class="tag">
-        <strong>Tip:</strong> Have documents ready â€” proof of income, ID, Social
-        Security numbers, and household information. This speeds up the process.
+        <strong>Tip:</strong> Have documents ready â€” proof of income, ID,
+        Social Security numbers, and household information. This speeds up the
+        process.
       </p>
     </main>
 
