chore: fixed mojibake punctuation next to Select County:

--- a/who-drives.html
+++ b/who-drives.html
@@ -133,7 +133,7 @@
 
       <section class="controls" aria-label="Filters">
         <select id="county" class="select" aria-label="Filter by county">
-          <option value="">Select countyâ€¦</option>
+          <option value="">Select county:</option>
         </select>
         <p id="count" class="count">0 results</p>
       </section>
