Removed mojibake em-dash punctuation from after-you-apply.html.

--- a/after-you-apply.html
+++ b/after-you-apply.html
@@ -208,7 +208,7 @@
               href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
               target="_blank"
               rel="noopener"
-              >kynect â€” Kentucky&rsquo;s official portal</a
+              >kynect - Kentucky&rsquo;s official portal</a
             >
           </li>
           <li>
