chore: punctuation fixes on after-you-apply.html

--- a/after-you-apply.html
+++ b/after-you-apply.html
@@ -224,7 +224,7 @@
               href="https://khbe.ky.gov/Enrollment/Pages/PHEUnwinding.aspx"
               target="_blank"
               rel="noopener"
-              >Keep coverage â€” notices & what to do (KHBE)</a
+              >Keep coverage - notices & what to do (KHBE)</a
             >
           </li>
         </ul>
