--- a/who-drives.html
+++ b/who-drives.html
@@ -1034,7 +1034,7 @@
 
       // Build dropdown
       countySelect.innerHTML =
-        '<option value="">Select countyâ€¦</option>' +
+        '<option value="">Select county:</option>' +
         Object.keys(BROKERS_BY_COUNTY)
           .sort()
           .map((c) => `<option value="${c}">${c}</option>`)
